fix(select): increase z-index of scrim

--- a/src/components/select/select.scss
+++ b/src/components/select/select.scss
@@ -138,5 +138,6 @@ $mdc-select-bottom-line-hover-color: $lime-text-field-bottom-line-color;
         height: 100%;
         top: 0;
         left: 0;
+        z-index: 5;
     }
 }
